scalable_mimes_iconsdir = join_paths(scalable_iconsdir, 'mimetypes')

regular_files = [
    # DO NOT REMOVE: Begining of regular segment
    'android-package-archive.svg',
    'application-affinity-template.svg',
    'application-affinity.svg',
    'application-epub+zip.svg',
    'application-illustrator.svg',
    'application-json.svg',
    'application-loc+xml.svg',
    'application-mathematica.svg',
    'application-mathematicaplayer.svg',
    'application-mbox.svg',
    'application-octet-stream.svg',
    'application-pdf.svg',
    'application-pgp-encrypted.svg',
    'application-pgp-keys.svg',
    'application-pgp-signature.svg',
    'application-pkix-cert.svg',
    'application-postscript.svg',
    'application-toml.svg',
    'application-vnd.adobe.aftereffects.project.svg',
    'application-vnd.adobe.xd.svg',
    'application-vnd.comicbook+zip.svg',
    'application-vnd.flatpak.svg',
    'application-vnd.iccprofile.svg',
    'application-vnd.leocad.svg',
    'application-vnd.scribus.svg',
    'application-vnd.snap.svg',
    'application-vnd.wolfram.mathematica.package.svg',
    'application-wasm.svg',
    'application-x-adobe-indesign.svg',
    'application-x-audacity-project.svg',
    'application-x-bittorrent.svg',
    'application-x-bitwig-studio.svg',
    'application-x-cd-image.svg',
    'application-x-cson.svg',
    'application-x-deb.svg',
    'application-x-designer.svg',
    'application-x-firmware.svg',
    'application-x-gettext-translation.svg',
    'application-x-godot-project.svg',
    'application-x-hwp.svg',
    'application-x-ipynb+json.svg',
    'application-x-iso9600-appimage.svg',
    'application-x-java-archive.svg',
    'application-x-kdenlive.svg',
    'application-x-model.svg',
    'application-x-musescore4portable+xml.svg',
    'application-x-musescore4portable.svg',
    'application-x-perl.svg',
    'application-x-photoshop.svg',
    'application-x-php.svg',
    'application-x-python-bytecode.svg',
    'application-x-rpm.svg',
    'application-x-shellscript.svg',
    'application-x-spectrum.svg',
    'application-x-subrip.svg',
    'application-x-theme.svg',
    'application-x-xopp.svg',
    'application-x-yaml.svg',
    'application-xml.svg',
    'cockos-reaper-backup.svg',
    'cockos-reaper-document.svg',
    'cockos-reaper-peak.svg',
    'cockos-reaper-template.svg',
    'cockos-reaper-template2.svg',
    'cockos-reaper-theme.svg',
    'com.bitwig.BitwigStudio.audio-x.dawproject.svg',
    'com.fender.studio.application-x.fender-fenderstudio.svg',
    'com.fender.studio.application-x.fender-jamtrack.svg',
    'image-vnd.djvu.svg',
    'oasis-database-template.svg',
    'oasis-database.svg',
    'oasis-drawing-template.svg',
    'oasis-drawing.svg',
    'oasis-empty-template.svg',
    'oasis-empty.svg',
    'oasis-formula-template.svg',
    'oasis-formula.svg',
    'oasis-master-document-template.svg',
    'oasis-master-document.svg',
    'oasis-presentation-template.svg',
    'oasis-presentation.svg',
    'oasis-spreadsheet-template.svg',
    'oasis-spreadsheet.svg',
    'oasis-text-template.svg',
    'oasis-text.svg',
    'oasis-web-template.svg',
    'oasis-web.svg',
    'org.kiwix.desktop.x-zim_source.svg',
    'org.rncbc.qtractor.application-x-qtractor-archive.svg',
    'org.rncbc.qtractor.application-x-qtractor-session.svg',
    'org.rncbc.qtractor.application-x-qtractor-template.svg',
    'org.wireshark.Wireshark-mimetype.svg',
    'text-asciidoc.svg',
    'text-css.svg',
    'text-pureDataPatch.svg',
    'text-rust.svg',
    'text-x-arduino.svg',
    'text-x-ass.svg',
    'text-x-bibtex.svg',
    'text-x-c.svg',
    'text-x-chdr.svg',
    'text-x-clojure.svg',
    'text-x-cobol.svg',
    'text-x-coffeescript.svg',
    'text-x-common-lisp.svg',
    'text-x-cpp.svg',
    'text-x-cpphdr.svg',
    'text-x-csharp.svg',
    'text-x-emacs-lisp.svg',
    'text-x-fsharp.svg',
    'text-x-gettext-translation-template.svg',
    'text-x-gettext-translation.svg',
    'text-x-go.svg',
    'text-x-gradle-kotlin.svg',
    'text-x-gradle.svg',
    'text-x-java.svg',
    'text-x-javascript.svg',
    'text-x-julia.svg',
    'text-x-kotlin.svg',
    'text-x-log.svg',
    'text-x-lua.svg',
    'text-x-makefile.svg',
    'text-x-markdown.svg',
    'text-x-maxima-out.svg',
    'text-x-maximasession.svg',
    'text-x-meson.svg',
    'text-x-ocaml.svg',
    'text-x-octave.svg',
    'text-x-patch.svg',
    'text-x-python.svg',
    'text-x-r-markdown.svg',
    'text-x-r.svg',
    'text-x-ruby.svg',
    'text-x-tex.svg',
    'text-x-typescript.svg',
    'text-x-typst.svg',
    'text-x-vala.svg',
    'text-x-zig.svg',
    'virtualbox-hdd.svg',
    'virtualbox-ova.svg',
    'virtualbox-ovf.svg',
    'virtualbox-vbox-extpack.svg',
    'virtualbox-vbox.svg',
    'virtualbox-vdi.svg',
    'virtualbox-vhd.svg',
    'virtualbox-vmdk.svg',
    # DO NOT REMOVE: End of regular segment
]

link_files = {
    # DO NOT REMOVE: Begining of link segment
    'text-x-tex.svg': [
        'text-x-stex.svg',
        'text-x-texinfo.svg',
    ],
    'text-x-ass.svg': [
        'text-x-ssa.svg',
    ],
    'text-x-python.svg': [
        'text-x-python3.svg',
    ],
    'application-x-php.svg': [
        'text-x-php.svg',
    ],
    'text-x-c.svg': [
        'text-x-csrc.svg',
    ],
    'text-x-cpphdr.svg': [
        'text-x-c++hdr.svg',
    ],
    'text-x-cpp.svg': [
        'text-x-c++.svg',
        'text-x-c++src.svg',
        'text-x-cppsrc.svg',
    ],
    'application-x-subrip.svg': [
        'text-vtt.svg',
    ],
    'text-x-markdown.svg': [
        'text-markdown.svg',
    ],
    'text-css.svg': [
        'text-less.svg',
        'text-x-css.svg',
        'text-x-less.svg',
        'text-x-sass.svg',
        'text-x-scss.svg',
    ],
    'text-x-fsharp.svg': [
        'text-fsharp.svg',
    ],
    'text-x-arduino.svg': [
        'text-arduino.svg',
    ],
    'oasis-web-template.svg': [
        'libreoffice-oasis-web-template.svg',
        'libreoffice-web-template.svg',
    ],
    'oasis-spreadsheet-template.svg': [
        'libreoffice-oasis-spreadsheet-template.svg',
        'libreoffice-spreadsheet-template.svg',
        'text-csv-schema.svg',
    ],
    'oasis-presentation-template.svg': [
        'libreoffice-oasis-presentation-template.svg',
        'libreoffice-presentation-template.svg',
        'openoffice4-presentation-template.svg',
    ],
    'oasis-master-document.svg': [
        'libreoffice-master-document.svg',
        'libreoffice-oasis-master-document.svg',
    ],
    'oasis-master-document-template.svg': [
        'libreoffice-master-document-template.svg',
        'libreoffice-oasis-master-document-template.svg',
    ],
    'oasis-formula.svg': [
        'libreoffice-formula.svg',
        'libreoffice-oasis-formula.svg',
    ],
    'oasis-formula-template.svg': [
        'libreoffice-formula-template.svg',
        'libreoffice-oasis-formula-template.svg',
    ],
    'oasis-empty.svg': [
        'libreoffice-empty.svg',
        'libreoffice-oasis-empty.svg',
    ],
    'oasis-empty-template.svg': [
        'libreoffice-empty-template.svg',
        'libreoffice-oasis-empty-template.svg',
    ],
    'oasis-drawing-template.svg': [
        'libreoffice-drawing-template.svg',
        'libreoffice-oasis-drawing-template.svg',
        'openoffice4-drawing-template.svg',
        'openoffice4-oasis-drawing-template.svg',
    ],
    'image-vnd.djvu.svg': [
        'image-vnd.djvu+multipage.svg',
        'image-x-djvu.svg',
    ],
    'text-x-makefile.svg': [
        'gnome-mime-text-x-makefile.svg',
        'text-x-cmake.svg',
        'text-x-pkgbuild.svg',
    ],
    'application-x-yaml.svg': [
        'application-yaml.svg',
        'text-x-yaml.svg',
        'text-yaml.svg',
    ],
    'application-x-xopp.svg': [
        'application-x-xopt.svg',
        'gnome-mime-application-x-xopp.svg',
        'gnome-mime-application-x-xopt.svg',
    ],
    'virtualbox-vmdk.svg': [
        'application-x-virtualbox-vmdk.svg',
    ],
    'virtualbox-vhd.svg': [
        'application-x-virtualbox-vhd.svg',
    ],
    'virtualbox-vdi.svg': [
        'application-x-virtualbox-vdi.svg',
    ],
    'virtualbox-vbox.svg': [
        'application-x-virtualbox-vbox.svg',
    ],
    'virtualbox-vbox-extpack.svg': [
        'application-x-virtualbox-vbox-extpack.svg',
    ],
    'virtualbox-ovf.svg': [
        'application-x-virtualbox-ovf.svg',
    ],
    'virtualbox-ova.svg': [
        'application-x-virtualbox-ova.svg',
    ],
    'virtualbox-hdd.svg': [
        'application-x-virtualbox-hdd.svg',
    ],
    'application-x-spectrum.svg': [
        'application-x-spectrum-tzx.svg',
    ],
    'application-x-rpm.svg': [
        'application-x-source-rpm.svg',
    ],
    'text-x-ruby.svg': [
        'application-x-ruby.svg',
        'text-ruby.svg',
    ],
    'text-x-r.svg': [
        'application-x-rdata.svg',
        'text-x-R.svg',
        'text-x-r-source.svg',
    ],
    'application-x-shellscript.svg': [
        'application-x-ptoptimizer-script.svg',
    ],
    'application-octet-stream.svg': [
        'application-x-msdownload.svg',
        'text-x-hex.svg',
    ],
    'application-x-bittorrent.svg': [
        'application-x-kgetlist.svg',
    ],
    'application-pgp-encrypted.svg': [
        'application-x-keepass.svg',
        'application-x-keepass2.svg',
        'application-x-keepassx.svg',
        'application-x-keepassxc.svg',
        'multipart-encrypted.svg',
    ],
    'text-x-julia.svg': [
        'application-x-julia.svg',
    ],
    'application-x-java-archive.svg': [
        'application-x-jar.svg',
    ],
    'application-pdf.svg': [
        'application-x-gzpdf.svg',
        'application-x-lzpdf.svg',
        'application-x-xzpdf.svg',
    ],
    'application-x-godot-project.svg': [
        'application-x-gdscript.svg',
        'application-x-godot-resource.svg',
        'application-x-godot-scene.svg',
        'application-x-godot-shader.svg',
    ],
    'application-x-theme.svg': [
        'application-x-e-theme.svg',
        'application-x-emerald-theme.svg',
        'application-x-ktheme.svg',
        'application-x-windows-themepack.svg',
    ],
    'text-x-clojure.svg': [
        'application-x-clojure.svg',
        'application-x-clojurescript.svg',
        'text-x-clojurescript.svg',
    ],
    'application-postscript.svg': [
        'application-x-bzpostscript.svg',
        'application-x-gzpostscript.svg',
    ],
    'text-x-patch.svg': [
        'application-x-bps-patch.svg',
        'application-x-bsdiff.svg',
        'application-x-ips-patch.svg',
    ],
    'application-x-model.svg': [
        'application-x-blender.svg',
        'model-obj.svg',
        'model-stl.svg',
        'model-x-stl-binary.svg',
        'model-x.stl-ascii.svg',
        'model-x.stl-binary.svg',
    ],
    'text-x-bibtex.svg': [
        'application-x-bibtex-text-file.svg',
    ],
    'application-x-audacity-project.svg': [
        'application-x-audacity-project+sqlite3.svg',
    ],
    'application-vnd.wolfram.mathematica.package.svg': [
        'application-vnd.wolfram.wl.svg',
        'application-vnd.wolfram.wls.svg',
    ],
    'application-mathematica.svg': [
        'application-vnd.wolfram.nb.svg',
    ],
    'application-mathematicaplayer.svg': [
        'application-vnd.wolfram.cdf.svg',
        'application-vnd.wolfram.player.svg',
    ],
    'oasis-text-template.svg': [
        'application-vnd.oasis.opendocument.text-template.svg',
        'libreoffice-oasis-text-template.svg',
        'libreoffice-text-template.svg',
        'openoffice4-oasis-text-template.svg',
        'openoffice4-text-template.svg',
    ],
    'oasis-database-template.svg': [
        'application-vnd.oasis.opendocument.database-template.svg',
        'libreoffice-database-template.svg',
        'libreoffice-oasis-database-template.svg',
    ],
    'oasis-web.svg': [
        'application-vnd.google-apps.site.svg',
        'libreoffice-oasis-web.svg',
        'libreoffice-web.svg',
    ],
    'oasis-presentation.svg': [
        'application-vnd.google-apps.presentation.svg',
        'application-vnd.insync.link.drive.slides.svg',
        'application-vnd.ms-powerpoint.presentation.macroEnabled.12.svg',
        'application-vnd.ms-powerpoint.svg',
        'application-vnd.openxmlformats-officedocument.presentationml.presentation.svg',
        'application-vnd.openxmlformats-officedocument.presentationml.slideshow.svg',
        'application-x-kpresenter.svg',
        'gdslides.svg',
        'libreoffice-oasis-presentation.svg',
        'libreoffice-presentation.svg',
        'openoffice4-oasis-presentation.svg',
        'openoffice4-presentation.svg',
    ],
    'oasis-spreadsheet.svg': [
        'application-vnd.google-apps.fusiontable.svg',
        'application-vnd.google-apps.spreadsheet.svg',
        'application-vnd.insync.link.drive.table.svg',
        'application-vnd.ms-excel.spreadsheet.macroenabled.12.svg',
        'application-vnd.ms-excel.svg',
        'application-vnd.oasis.opendocument.spreadsheet.svg',
        'application-vnd.openxmlformats-officedocument.spreadsheetml.sheet.svg',
        'application-x-applix-spreadsheet.svg',
        'gdtable.svg',
        'libreoffice-oasis-spreadsheet.svg',
        'libreoffice-spreadsheet.svg',
        'openoffice4-oasis-spreadsheet.svg',
        'openoffice4-spreadsheet.svg',
        'text-csv.svg',
        'text-spreadsheet.svg',
        'text-tab-separated-values.svg',
    ],
    'oasis-drawing.svg': [
        'application-vnd.google-apps.drawing.svg',
        'application-vnd.insync.link.drive.draw.svg',
        'application-x-krita-assistant.svg',
        'application-x-krita-paintoppresent.svg',
        'application-x-krita.svg',
        'gddraw.svg',
        'image-x-krita.svg',
        'libreoffice-drawing.svg',
        'libreoffice-oasis-drawing.svg',
        'openoffice4-drawing.svg',
        'openoffice4-oasis-drawing.svg',
    ],
    'oasis-text.svg': [
        'application-vnd.google-apps.document.svg',
        'application-vnd.insync.link.drive.doc.svg',
        'application-vnd.ms-word.document.macroenabled.12.svg',
        'application-vnd.ms-word.svg',
        'application-vnd.oasis.opendocument.text.svg',
        'application-vnd.openxmlformats-officedocument.wordprocessingml.document.svg',
        'gddoc.svg',
        'libreoffice-oasis-text.svg',
        'libreoffice-text.svg',
        'openoffice4-oasis-text.svg',
    ],
    'application-vnd.flatpak.svg': [
        'application-vnd.flatpak.ref.svg',
    ],
    'application-x-cd-image.svg': [
        'application-vnd.efi.img.svg',
        'application-vnd.efi.iso.svg',
        'application-vnd.squashfs.svg',
        'application-x-apple-diskimage.svg',
        'application-x-compressed-iso.svg',
        'application-x-iso.svg',
        'application-x-raw-disk-image-xz-compressed.svg',
        'application-x-raw-disk-image.svg',
        'application-x-raw-floppy-disk-image.svg',
        'gnome-mime-application-x-nero-disk-image.svg',
        'nero-disk-image.svg',
    ],
    'application-x-deb.svg': [
        'application-vnd.debian.binary-package.svg',
    ],
    'application-vnd.comicbook+zip.svg': [
        'application-vnd.comicbook-rar.svg',
        'application-x-cb7.svg',
        'application-x-cba.svg',
        'application-x-cbr.svg',
        'application-x-cbt.svg',
        'application-x-cbz.svg',
    ],
    'text-x-coffeescript.svg': [
        'application-vnd.coffeescript.svg',
        'text-coffeescript.svg',
    ],
    'application-x-iso9600-appimage.svg': [
        'application-vnd.appimage.svg',
    ],
    'application-epub+zip.svg': [
        'application-vnd.amazon.mobi8-ebook.svg',
        'application-x-fictionbook+xml.svg',
        'application-x-fictionbook.svg',
        'application-x-mobi8-ebook.svg',
        'application-x-mobipocket-ebook.svg',
        'application-x-zip-compressed-fb2.svg',
        'x-content-ebook-reader.svg',
    ],
    'application-vnd.adobe.aftereffects.project.svg': [
        'application-vnd.adobe.aftereffects.template.svg',
    ],
    'text-x-typescript.svg': [
        'application-typescript.svg',
        'application-x-typescript.svg',
    ],
    'oasis-database.svg': [
        'application-sql.svg',
        'application-vnd.insync.link.drive.form.svg',
        'application-vnd.ms-access.svg',
        'application-vnd.oasis.opendocument.database.svg',
        'application-vnd.sqlite2.svg',
        'application-vnd.sqlite3.svg',
        'application-x-dbf.svg',
        'application-x-gdbm.svg',
        'application-x-kexi-connectiondata.svg',
        'application-x-kexiproject-sqlite2.svg',
        'application-x-kexiproject-sqlite3.svg',
        'application-x-ole-storage.svg',
        'application-x-sqlite2.svg',
        'application-x-sqlite3.svg',
        'chemical-x-cache.svg',
        'gdform.svg',
        'libreoffice-database.svg',
        'libreoffice-oasis-database.svg',
        'office-database.svg',
        'openoffice4-database.svg',
        'openoffice4-oasis-database.svg',
        'qgis-sqlite.svg',
        'text-x-sql.svg',
    ],
    'application-json.svg': [
        'application-schema+json.svg',
        'text-json.svg',
    ],
    'application-pgp-signature.svg': [
        'application-pkcs7-signature.svg',
        'multipart-signed.svg',
    ],
    'application-pkix-cert.svg': [
        'application-pkcs10.svg',
        'application-pkcs12.svg',
        'application-pkcs7-mime.svg',
        'application-x-pkcs12.svg',
        'application-x-pkcs7-certificates.svg',
        'application-x-pkcs7.svg',
        'application-x-x509-ca-cert.svg',
        'application-x-x509-user-cert.svg',
    ],
    'application-x-photoshop.svg': [
        'application-photoshop.svg',
        'image-vnd.adobe.photoshop.svg',
        'image-x-photoshop.svg',
    ],
    'application-pgp-keys.svg': [
        'application-pgp.svg',
        'application-pkcs8.svg',
        'application-x-pem-key.svg',
        'org.keepassxc.KeePassXC-application-x-keepassxc.svg',
    ],
    'text-x-javascript.svg': [
        'application-javascript.svg',
        'application-x-javascript.svg',
        'text-javascript.svg',
    ],
    'text-x-java.svg': [
        'application-java.svg',
        'application-x-java-applet.svg',
        'application-x-java.svg',
        'text-x-java-source.svg',
    ],
    'application-x-hwp.svg': [
        'application-hwp.svg',
        'application-hwpx.svg',
        'application-x-hwpx.svg',
    ],
    'application-loc+xml.svg': [
        'application-geo+json.svg',
        'application-gml+xml.svg',
        'application-gpx+xml.svg',
        'application-gpx.svg',
        'application-slf+xml.svg',
        'application-tcx+xml.svg',
        'application-vnd-google-earth-kml.svg',
        'application-vnd.ant.fit.svg',
        'application-vnd.fai.igc.svg',
        'application-vnd.geo+json.svg',
        'application-vnd.google-apps.map.svg',
        'application-vnd.google-earth.kml+xml.svg',
        'application-vnd.google-earth.kml.svg',
        'application-vnd.google-earth.kmz.svg',
        'application-vnd.nmea.nmea.svg',
        'application-vnd.oziexplorer.plt.svg',
        'application-vnd.oziexplorer.rte.svg',
        'application-vnd.oziexplorer.wpt.svg',
        'application-vnd.rmaps.sqlite.svg',
        'application-vnd.shp.svg',
        'application-vnd.shx.svg',
        'application-x-gpx+xml.svg',
        'application-x-gpx.svg',
        'application-x-osm+xml.svg',
        'qgis-dxf.svg',
        'qgis-gml.svg',
        'qgis-qgs.svg',
        'qgis-qlr.svg',
        'qgis-shp.svg',
    ],
    'application-x-bitwig-studio.svg': [
        'application-bitwig-clip.svg',
        'application-bitwig-device.svg',
        'application-x-bitwig-clip.svg',
        'application-x-bitwig-device.svg',
        'application-x-com.bitwig-clip.BitwigStudio.svg',
        'application-x-com.bitwig-device.BitwigStudio.svg',
        'application-x-com.bitwig.BitwigStudio.svg',
        'com.bitwig.BitwigStudio.application-bitwig-clip.svg',
        'com.bitwig.BitwigStudio.application-bitwig-device.svg',
        'com.bitwig.BitwigStudio.application-bitwig-extension.svg',
        'com.bitwig.BitwigStudio.application-bitwig-impulse.svg',
        'com.bitwig.BitwigStudio.application-bitwig-modulator.svg',
        'com.bitwig.BitwigStudio.application-bitwig-module.svg',
        'com.bitwig.BitwigStudio.application-bitwig-package.svg',
        'com.bitwig.BitwigStudio.application-bitwig-preset.svg',
        'com.bitwig.BitwigStudio.application-bitwig-project.svg',
        'com.bitwig.BitwigStudio.application-bitwig-remote-controls.svg',
    ],
    'application-xml.svg': [
        'application-atom+xml.svg',
        'application-metalink+xml.svg',
        'application-metalink4+xml.svg',
        'application-owl+xml.svg',
        'application-rss+xml.svg',
        'application-xslt+xml.svg',
        'text-rdf+xml.svg',
        'text-xml.svg',
    ],
    'android-package-archive.svg': [
        'application-apk.svg',
        'application-vnd.android.package-archive.svg',
    ],
    # DO NOT REMOVE: End of link segment
}

install_data(regular_files, install_dir: scalable_mimes_iconsdir)

foreach dest_file, link_files_for_dest : link_files
    foreach link_file : link_files_for_dest
        install_symlink(link_file, install_dir: scalable_mimes_iconsdir, pointing_to: dest_file)
    endforeach
endforeach
