scalable_places_iconsdir = join_paths(scalable_iconsdir, 'places')

regular_files = [
    # DO NOT REMOVE: Begining of regular segment
    'folder-3dbenchy-legacy.svg',
    'folder-3dbenchy.svg',
    'folder-android-legacy.svg',
    'folder-android.svg',
    'folder-appimage-legacy.svg',
    'folder-appimage.svg',
    'folder-archlinux-legacy.svg',
    'folder-archlinux.svg',
    'folder-arduino-legacy.svg',
    'folder-arduino.svg',
    'folder-backup-legacy.svg',
    'folder-backup.svg',
    'folder-bitwig-legacy.svg',
    'folder-bitwig.svg',
    'folder-blender-legacy.svg',
    'folder-blender.svg',
    'folder-books-legacy.svg',
    'folder-books.svg',
    'folder-c-legacy.svg',
    'folder-c.svg',
    'folder-camera-legacy.svg',
    'folder-camera.svg',
    'folder-code-legacy.svg',
    'folder-code.svg',
    'folder-codeberg-legacy.svg',
    'folder-codeberg.svg',
    'folder-cplusplus-legacy.svg',
    'folder-cplusplus.svg',
    'folder-csharp-legacy.svg',
    'folder-csharp.svg',
    'folder-dropbox-legacy.svg',
    'folder-dropbox.svg',
    'folder-earth-legacy.svg',
    'folder-earth.svg',
    'folder-emacs-legacy.svg',
    'folder-emacs.svg',
    'folder-extensions-legacy.svg',
    'folder-extensions.svg',
    'folder-fedora-legacy.svg',
    'folder-fedora.svg',
    'folder-flatpak-legacy.svg',
    'folder-flatpak.svg',
    'folder-freecad-legacy.svg',
    'folder-freecad.svg',
    'folder-games-legacy.svg',
    'folder-games.svg',
    'folder-gimp-legacy.svg',
    'folder-gimp.svg',
    'folder-git-legacy.svg',
    'folder-git.svg',
    'folder-github-legacy.svg',
    'folder-github.svg',
    'folder-gitlab-legacy.svg',
    'folder-gitlab.svg',
    'folder-globe-legacy.svg',
    'folder-globe.svg',
    'folder-gnome-legacy.svg',
    'folder-gnome.svg',
    'folder-go-legacy.svg',
    'folder-go.svg',
    'folder-godot-legacy.svg',
    'folder-godot.svg',
    'folder-google-drive-legacy.svg',
    'folder-google-drive.svg',
    'folder-inkscape-legacy.svg',
    'folder-inkscape.svg',
    'folder-java-legacy.svg',
    'folder-java.svg',
    'folder-kde-legacy.svg',
    'folder-kde.svg',
    'folder-kicad-legacy.svg',
    'folder-kicad.svg',
    'folder-local-legacy.svg',
    'folder-local.svg',
    'folder-lua-legacy.svg',
    'folder-lua.svg',
    'folder-mega-legacy.svg',
    'folder-mega.svg',
    'folder-money-legacy.svg',
    'folder-money.svg',
    'folder-musescore-legacy.svg',
    'folder-musescore.svg',
    'folder-neovim-legacy.svg',
    'folder-neovim.svg',
    'folder-nextcloud-legacy.svg',
    'folder-nextcloud.svg',
    'folder-nix-legacy.svg',
    'folder-nix.svg',
    'folder-onedrive-legacy.svg',
    'folder-onedrive.svg',
    'folder-openscad-legacy.svg',
    'folder-openscad.svg',
    'folder-opensuse-legacy.svg',
    'folder-opensuse.svg',
    'folder-platformio-legacy.svg',
    'folder-platformio.svg',
    'folder-podcast-legacy.svg',
    'folder-podcast.svg',
    'folder-private-legacy.svg',
    'folder-private.svg',
    'folder-projects-legacy.svg',
    'folder-projects.svg',
    'folder-python-legacy.svg',
    'folder-python.svg',
    'folder-r-legacy.svg',
    'folder-r.svg',
    'folder-raspberry-pi-legacy.svg',
    'folder-raspberry-pi.svg',
    'folder-reaper-legacy.svg',
    'folder-reaper.svg',
    'folder-recent-legacy.svg',
    'folder-recent.svg',
    'folder-redhat-legacy.svg',
    'folder-redhat.svg',
    'folder-ruby-legacy.svg',
    'folder-ruby.svg',
    'folder-rust-legacy.svg',
    'folder-rust.svg',
    'folder-school-legacy.svg',
    'folder-school.svg',
    'folder-screencast-legacy.svg',
    'folder-screencast.svg',
    'folder-screenshot-legacy.svg',
    'folder-screenshot.svg',
    'folder-shell-legacy.svg',
    'folder-shell.svg',
    'folder-syncthing-legacy.svg',
    'folder-syncthing.svg',
    'folder-temp-legacy.svg',
    'folder-temp.svg',
    'folder-torrent-legacy.svg',
    'folder-torrent.svg',
    'folder-translation-legacy.svg',
    'folder-translation.svg',
    'folder-ubuntu-legacy.svg',
    'folder-ubuntu.svg',
    'folder-user-legacy.svg',
    'folder-user.svg',
    'folder-vala-legacy.svg',
    'folder-vala.svg',
    'folder-wine-legacy.svg',
    'folder-wine.svg',
    'folder-work-legacy.svg',
    'folder-work.svg',
    'go-home.svg',
    # DO NOT REMOVE: End of regular segment
]

link_files = {
    # DO NOT REMOVE: Begining of link segment
    'folder-recent.svg': [
        'document-open-recent.svg',
    ],
    'folder-bitwig.svg': [
        'com.bitwig.BitwigStudio.application-bitwig-project-folder.svg',
    ],
    'folder-bitwig-legacy.svg': [
        'com.bitwig.BitwigStudio.application-bitwig-project-folder-legacy.svg',
    ],
    # DO NOT REMOVE: End of link segment
}

install_data(regular_files, install_dir: scalable_places_iconsdir)

foreach dest_file, link_files_for_dest : link_files
    foreach link_file : link_files_for_dest
        install_symlink(link_file, install_dir: scalable_places_iconsdir, pointing_to: dest_file)
    endforeach
endforeach
